--- a/.github/workflows/Build_OP_x86_64.yml
+++ b/.github/workflows/Build_OP_x86_64.yml
@@ -58,6 +58,8 @@ jobs:
         git clone https://github.com/jefferymvp/luci-app-koolproxyR package/koolproxyR
         git clone https://github.com/rufengsuixing/luci-app-adguardhome package/adguardhome
         git clone https://github.com/frainzy1477/luci-app-clash package/clash
+        git clone https://github.com/fw876/helloworld package/ssrplus
+        svn export https://github.com/superstarfly/lienol-openwrt-package.git/trunk/lienol/luci-app-passwall package/passwall   
        # git clone 其他github插件源码地址 package/文件夹名称  
         
     - name: Configuration Customization - Build_x86_64
