--- a/.github/workflows/Build_OP_x86_64.yml
+++ b/.github/workflows/Build_OP_x86_64.yml
@@ -54,7 +54,7 @@ jobs:
       working-directory: ./openwrt
       run: |
         git clone https://github.com/superstarfly/openwrt-package package/lienol
-        git clone https://github.com/vernesong/OpenClash package/openclash
+        git clone https://github.com/superstarfly/OpenClash package/openclash
         git clone https://github.com/jefferymvp/luci-app-koolproxyR package/koolproxyR
         git clone https://github.com/rufengsuixing/luci-app-adguardhome package/adguardhome
         git clone https://github.com/frainzy1477/luci-app-clash package/clash
